--- a/views/addCreditSale.pug
+++ b/views/addCreditSale.pug
@@ -88,9 +88,9 @@ html
     nav.navbar
       ul
         li
-          a(href='/dashboard') Dashboard
+          a(href='/ManagerDashboard') Dashboard
         li
-          a(href='/addCreditSale') Credit Sale
+          a(href='/addCreditSale') Credit Mangement
         li
           a(href='/addProduceSale') Produce Sale
         li
