--- a/views/managersDashboard.pug
+++ b/views/managersDashboard.pug
@@ -19,9 +19,9 @@ html
               |  Home
           br
           li
-            a(href='/registerProduce')
-              i.fas.fa-carrot
-              |  Register Produce
+            a(href='/addCreditSale')
+              i.fas.fa-list
+              |  Credit Management
           br
           li
             a(href='/addProduceSale')
