--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,12 +4,12 @@ html
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Karibu Grocery Signup
-    link(rel='stylesheet' href='./css/signup.css')
+    link(rel='stylesheet' href='./css/signup.css') 
   body
     .signup-container
       h2 Karibu Grocery - Signup
 
-      //- Error container for password mismatch (still used for JS logic)
+      //- Error container for password mismatch
       #errorContainer(style="display: none; color: red; margin-bottom: 1em;")
         | Passwords do not match.
 
@@ -62,4 +62,8 @@ html
 
         button(type="submit") Sign Up
 
+      //- Back button without inline style
+      a(href='/' class='back-button') ← Back
+
     script(src='/js/signup.js')
+
