added the a thousand separetor

--- a/views/managersDashboard.pug
+++ b/views/managersDashboard.pug
@@ -17,25 +17,21 @@ html
         h2 Karibu Grocery
         ul
           li
-            a(href='/')
+            a(href='/ManagerDashboard')
               i.fas.fa-home
               |  Home
-          br
           li
             a(href='/addCreditSale')
               i.fas.fa-list
               |  Credit Management
-          br
           li
             a(href='/addProduceSale')
               i.fas.fa-chart-line
               |  Sales
-          br
           li
             a(href='/addstock')
               i.fas.fa-box
               |  Stock
-          br
           li
             a(href='/addprocurement')
               i.fas.fa-shopping-cart
