added date restrictions in forms

--- a/views/Addsale.pug
+++ b/views/Addsale.pug
@@ -19,4 +19,4 @@ head
     label(for='customerName') Customer Name:
     input#customer(type='text' name="customerName")
     button(type='submit') Submit Sale
-script(src='Addsale.js')
+script(src='/js/Addsale.js')
