--- a/views/creditSaleList.pug
+++ b/views/creditSaleList.pug
@@ -5,6 +5,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Credit Sales Table
     link(rel='stylesheet', href='/css/creditSaleList.css')
+    link(rel='stylesheet', href='/css/deleteModal.css')
   body
     // Top Navigation Bar
     nav.navbar
@@ -53,7 +54,7 @@ html
                 td #{sale.salesAgentName}
                 td
                   a.btn.btn-primary.update-btn(href='/UpdateCrediteSale/' + sale._id) Update
-                  form(action="/creditSale/delete-creditSale/" method="POST" style="display:inline")
+                  form(action="/creditSale/delete-creditSale/" method="POST" style="display:inline" onsubmit="return showDeleteConfirmation('Are you sure you want to delete this credit sale?', '#{sale.buyerName}', this)")
                     input(type="hidden" name="_id" value=sale._id)
                     button.btn.btn-danger.delete-btn(type="submit") Delete
           else
@@ -66,5 +67,6 @@ html
     footer
       | &copy; 2025 CreditSalesList System | Developed by Komuntale Elizabeth All Rights Reserved.
 
+    script(src='/js/deleteModal.js')
     script(src='js/creditSaleList.js')
 
