--- a/views/producesaleslist.pug
+++ b/views/producesaleslist.pug
@@ -5,6 +5,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Produce Sales List
     link(rel='stylesheet', href='./css/produceSalesList.css')
+    link(rel='stylesheet', href='./css/deleteModal.css')
   body
     // Top Navigation Bar
     nav.navbar
@@ -38,8 +39,8 @@ html
               td #{sale.salesAgent}
               td #{sale.saleDateTime}
               td
-                a.update-btn(href="/UpdateproduceSale/" + sale._id) Update
-                form(action="/produceSale/deleteSale/" method="POST" style="display:inline")
+                a.update-btn(href="/UpdateProduceSale/" + sale._id) Update
+                form(action="/produceSale/deleteSale/" method="POST" style="display:inline" onsubmit="return showDeleteConfirmation('Are you sure you want to delete this produce sale?', '#{sale.produceName}', this)")
                   input(type="hidden" name="_id" value=sale._id)
                   button.delete-btn(type="submit") Delete
         else
@@ -51,5 +52,6 @@ html
     footer
       p &copy; 2025 Sales Management System | All Rights Reserved
 
+    script(src='js/deleteModal.js')
     script(src='js/produceSaleslist.js')
 
